# DYMKM

./: .Module.symvers.cmd  .memory_reader.ko.cmd  .memory_reader.mod.cmd  .memory_reader.mod.o.cmd  .memory_reader.o.cmd  .modules.order.cmd  README.md  memory_reader.ko  memory_reader.mod  memory_reader.mod.c  memory_reader_modify.c  modules.order
src/: InstrumentIndirectInstructionsPass.cpp
src/control_flow_capture/: InstrumentIndirectInstructionsPass.cpp
src/cumulative_hash/: CMakeLists.txt
src/cumulative_hash/host/: Makefile  main.c
src/cumulative_hash/ta/: Makefile  cumul_hash_ta.c  sub.mk  user_ta_header_defines.h
src/cumulative_hash/ta/include/: cumul_hash_ta.h
src/measurement_agent/: agent.c  agent.h
src/process_memory_capture/: .Module.symvers.cmd  .memory_reader.ko.cmd  .memory_reader.mod.cmd  .memory_reader.mod.o.cmd  .memory_reader.o.cmd  .modules.order.cmd  Makefile  integrity_measurement.py  memory_reader.c
src/shared_memory/: CMakeLists.txt
src/shared_memory/host/: Makefile  main.c
src/shared_memory/ta/: Makefile  shared_mem_ta.c  sub.mk  user_ta_header_defines.h
src/shared_memory/ta/include/: shared_mem_ta.h
test/: branch.c  instrumented.ll  instrumented_program
